# crowd-pilot

./: .gitmodules  README.md  pyproject.toml
crowd-pilot/: serialization_utils.py  serialize_dataset.py  serialize_dataset_array_record.py  serialize_dataset_nemo_json.py
crowd_pilot/: insert_missing_csv_newlines.py  serialization_utils.py  serialize_dataset_nemo_json.py
tests/: test_serialization_utils.py
