[project]
name = "crowd-pilot"
description = "Teaching language models to code like humans."
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "datasets>=2.19.0",
    "pandas>=2.2.2",
    "pyarrow>=15.0.2",
    "tqdm>=4.66.4",
    "regex>=2024.5.15",
]

[project.urls]
Repository = "https://github.com/p-doom/crowd-pilot"